--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,30 @@ body {
 }
 
 .game-board {
-
+  width: 210px;
+  margin: auto;
+  padding: 0px;
+  text-align: center;
 }
 
 .game-board-block {
-
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
 }
 
 .game-controls {
+  margin: auto;
+}
 
+.game-controls * {
+  padding: 10px;
+  background-color: lightgray;
+  border: 1px solid white;
+  border-radius: 5px;
+  color: #888;
+  cursor: pointer;
 }
 
 .game-controls#up {
